# celerite2

./: .clang-format  .coveragerc  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  noxfile.py  pyproject.toml  readthedocs.yml  setup.py  test.cc  tox.ini
.ci/azure/: cpp.yml
.github/workflows/: cpp.yml  python.yml  tutorials.yml  tutorials.yml.off  wheels.yml  windows.yml
c++/: CMakeLists.txt
c++/include/celerite2/: celerite2.h  core.hpp  core2.hpp  forward.hpp  interface.hpp  internal.hpp  reverse.hpp  terms.hpp  utils.hpp
c++/test/: CMakeLists.txt  catch.hpp  helpers.hpp  test_backward_rev.cpp  test_backward_sweep_grad.cpp  test_dot_tril.cpp  test_dot_tril_rev.cpp  test_factor.cpp  test_factor_grad.cpp  test_factor_rev.cpp  test_forward_rev.cpp  test_forward_sweep_grad.cpp  test_general_matmul.cpp  test_general_matmul_lower.cpp  test_general_matmul_upper.cpp  test_matmul.cpp  test_matmul_lower.cpp  test_matmul_lower_rev.cpp  test_matmul_rev.cpp  test_matmul_upper.cpp  test_matmul_upper_rev.cpp  test_norm.cpp  test_norm_rev.cpp  test_search_sorted.cpp  test_solve.cpp  test_solve_grad.cpp  test_solve_lower.cpp  test_solve_lower_rev.cpp  test_solve_rev.cpp  test_solve_upper.cpp  test_solve_upper_rev.cpp  test_terms.cpp  test_to_dense.cpp
docs/: .gitignore  Doxyfile.in  Makefile  api.rst  citation.rst  conf.py  environment.yml  index.rst  install.rst
docs/_static/: custom.css  custom.js
docs/_templates/: header.html  layout.html
docs/api/: c++.rst  jax.rst  pymc.rst  pymc3.rst  pymc4.rst  python.rst  theano.rst
docs/tutorials/: first.ipynb  first.py  kron.py  notebook_setup.py
docs/user/: install.rst  upgrade.rst
include/: celerite.h  core.hpp  terms.hpp  utils.hpp
include/celerite2/: core.hpp  terms.hpp  utils.hpp
python/: .gitignore  README.md
python/celerite2/: __init__.py  backprop.cpp  celerite2.py  citation.py  core.py  driver.cpp  driver.hpp  ext.py  interface.cpp  kron.py  latent.py  numpy.py  terms.py  testing.py
python/celerite2/jax/: __init__.py  celerite2.py  core.py  distribution.py  ops.py  scan_ops.py  terms.py  xla_ops.cpp
python/celerite2/pymc/: __init__.py  celerite2.py  distribution.py  jax_support.py  ops.py  terms.py
python/celerite2/pymc3/: __init__.py  celerite2.py  distribution.py  ops.py  terms.py
python/celerite2/pymc4/: __init__.py  celerite2.py  distribution.py  jax_support.py  ops.py  terms.py
python/celerite2/theano/: __init__.py  celerite2.py  core.py  distribution.py  kron.py  ops.py  terms.py
python/celerite2/torch/: celerite2.py  ops.py  terms.py
python/spec/: generate.py  interface.json
python/spec/templates/: backprop.cpp  driver.cpp
python/spec/templates/jax/: xla_ops.cpp
python/test/: test_backprop.py  test_celerite2.py  test_driver.py  test_kron.py  test_latent.py  test_terms.py
python/test/jax/: test_celerite2.py  test_jax_celerite2.py  test_jax_ops.py  test_jax_terms.py  test_ops.py  test_terms.py
python/test/pymc/: conftest.py  test_pymc_celerite2.py  test_pymc_distribution.py  test_pymc_ops.py  test_pymc_terms.py
python/test/pymc3/: test_celerite2.py  test_ops.py  test_pymc3_celerite2.py  test_pymc3_ops.py  test_pymc3_terms.py  test_terms.py
python/test/pymc4/: conftest.py  test_pymc4_celerite2.py  test_pymc4_ops.py  test_pymc4_terms.py
python/test/theano/: conftest.py  test_celerite2.py  test_core.py  test_kron.py  test_ops.py  test_terms.py
python/test/torch/: test_celerite2.py  test_ops.py  test_terms.py
src/celerite2/: __init__.py  ops.py  terms.py
test/: CMakeLists.txt  helpers.hpp  test_dot_l.cpp  test_factor.cpp  test_factor_grad.cpp  test_matmul.cpp  test_search_sorted.cpp  test_solve.cpp  test_solve_grad.cpp  test_to_dense.cpp
tests/: test_ops.py  test_terms.py
