[build-system]
requires = [
  "setuptools>=40.6.0",
  "wheel",
  "setuptools_scm",
  "oldest-supported-numpy",
  "pybind11>=2.4",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_first_party = ["celerite2"]

[tool.pytest.ini_options]
addopts = "-v"

[tool.coverage.run]
parallel = true
branch = true
source = ["celerite2"]
omit = ["*_test.py", "*__init__*", "*/celerite2/celerite2_version.py"]

[tool.coverage.paths]
source = ["python", "*/site-packages"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
  "raise NotImplementedError",
  "except ImportError",
  "pragma: no cover",
  "def R_op",
  "if verbose",
]
